# GeneSFlow

./: .gitignore  CMakeLists.txt  GSFRange.cpp  GSFRange.h  GeneBody.cpp  GeneBody.h  Makefile  README.md  main.cpp
GeneSFlow/: CMakeLists.txt  GeneSFlow.cpp  GeneSFlow.h
